SERVER-28975 Fix typos